--- a/Agency/index.html
+++ b/Agency/index.html
@@ -368,7 +368,7 @@
 							</div>
 						</div>
 						<div class="testimonial__info">
-							<div class="testimonial__quotation"><span>“</span></div>
+							<div class="testimonial__quotation"><span>"</span></div>
 							<div class="testimonial__content">
 								<p class="testimonial__text text-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
 								<span class="testimonial__name">Jinny Snow, Company CEO</span>
@@ -384,7 +384,7 @@
 							</div>
 						</div>
 						<div class="testimonial__info">
-							<div class="testimonial__quotation"><span>“</span></div>
+							<div class="testimonial__quotation"><span>"</span></div>
 							<div class="testimonial__content">
 								<p class="testimonial__text text-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
 								<span class="testimonial__name">Jinny Snow, Company CEO</span>
@@ -400,7 +400,7 @@
 							</div>
 						</div>
 						<div class="testimonial__info">
-							<div class="testimonial__quotation"><span>“</span></div>
+							<div class="testimonial__quotation"><span>"</span></div>
 							<div class="testimonial__content">
 								<p class="testimonial__text text-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.</p>
 								<span class="testimonial__name">Jinny Snow, Company CEO</span>
