--- a/Sports/index.html
+++ b/Sports/index.html
@@ -698,10 +698,9 @@ L418.487,499.6l53.732-53.732l-84.706-255.961L496.808,85.022C516.776,65.86,517.10
         </div>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
     <script src="assets/js/jquery.magnific-popup.min.js"></script>
-    <!--    <script src="assets/js/jquery.magnific-popup.min.js"></script>-->
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/all.js"></script>
 
 </body>
 
