--- a/metall/index.html
+++ b/metall/index.html
@@ -64,7 +64,7 @@
                         </div>
 
                         <div class="company-info__contact">
-                            <b>+1 (111) 111-1111</b>
+                            <b>+7 (391) 205-3000</b>
                             <span>9.00 - 18.00 | Ежедневно</span>
                         </div>
 
@@ -152,25 +152,25 @@
                     <div class="features__img">
                         <img src="assets/img/egg1.png" alt="">
                     </div>
-                    <span class="features__text">Постоянное наличие металла на складе</span>
+                    <h3 class="features__text">Постоянное наличие металла на складе</h3>
                 </div>
                 <div class="features__item">
                     <div class="features__img">
                         <img src="assets/img/egg2.png" alt="">
                     </div>
-                    <span class="features__text">Наличие сертификатов на качество металлов</span>
+                    <h3 class="features__text">Наличие сертификатов на качество металлов</h3>
                 </div>
                 <div class="features__item">
                     <div class="features__img">
                         <img src="assets/img/egg3.png" alt="">
                     </div>
-                    <span class="features__text">Отсрочка платежей при необходимости</span>
+                    <h3 class="features__text">Отсрочка платежей при необходимости</h3>
                 </div>
                 <div class="features__item">
                     <div class="features__img">
                         <img src="assets/img/egg4.png" alt="">
                     </div>
-                    <span class="features__text">Большой ассортимент и низкие цены</span>
+                    <h3 class="features__text">Большой ассортимент и низкие цены</h3>
                 </div>
 
             </div>
@@ -273,7 +273,7 @@
                     </div>
 
                     <div class="company-info__contact">
-                        <b>+1 (111) 111-1111</b>
+                        <b>+7 (391) 205-3000</b>
                         <span>9.00 - 18.00 | Ежедневно</span>
                     </div>
 
